CallMD/src/objects/Immunization_Members__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>Immunization Members</relationshipLabel>
        <relationshipName>Immunization_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Immunization Members</label>
    <nameField>
        <label>Immunization Members	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Immunization Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>